k8s/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
status:
  loadBalancer: {}
